--- a/step7_ising/CMakeLists.txt
+++ b/step7_ising/CMakeLists.txt
@@ -4,9 +4,11 @@ project(ising2_mc CXX)
 add_executable(${PROJECT_NAME} main.cpp ising.cpp)
 
 # Request the ALPSCore package (with all components)
-# The ALPSCore package must be installed in some standard place (like /usr/local),
+# The ALPSCore package must be installed in some
+# standard place (like /usr/local),
 # or somewhere in your PATH. 
-# Otherwise, point ALPSCore_DIR environment variable to the ALPScore installation tree.
+# Otherwise, point ALPSCore_DIR environment variable
+# to the ALPScore installation tree.
 find_package(ALPSCore REQUIRED)
 
 # Use ALPSCore_LIBRARIES variable to link to ALPSCore 
