--- a/step3_ising/ising.ini
+++ b/step3_ising/ising.ini
@@ -1,4 +1,8 @@
-length = 16
+length = 3
 sweeps = 999999999
+acc = fullbin
+timelimit = 15
 # Tc:
-temp = 2.2692
+#temp = 2.2692
+# Above Tc:
+temp = 3.5
